--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       # Node Environment
       - NODE_ENV=production
-      - PORT=3001
+      - PORT=3500
       
       # Database Connection (External PostgreSQL)
       # Update these to match your PostgreSQL server
@@ -31,9 +31,11 @@ services:
       # - SNAPEDA_API_KEY=your_api_key
     ports:
       - "80:80"          # Frontend (nginx)
-      # - "3001:3001"    # Backend API (optional, commented out - accessible via nginx at /api)
+      - "3500:3500"      # Backend API
     volumes:
-      - ./download:/app/download/footprint
+      - ./download/footprint:/app/download/footprint
+      - ./download/symbol:/app/download/symbol
+      - ./download/pad:/app/download/pad
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
@@ -41,6 +43,3 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-
-volumes:
-  footprint_downloads:
