--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ temp/
 *.txt
 *.md
 !README.md
+!app/config/README.md
+
+# Application config (settings are environment-specific)
+app/config/settings.json
