--- a/nginx.conf
+++ b/nginx.conf
@@ -41,11 +41,16 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+        
+        # Add CORS headers if needed
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
     }
 
-    # Health check endpoint
+    # Health check endpoint (internal)
     location /health {
-        proxy_pass http://localhost:3500/health;
+        proxy_pass http://localhost:3500/api/health;
         access_log off;
     }
 
