feat: new layout and seq on pn

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Allegro Component Library - Environment Configuration
-# Copy this file to .env and update with your actual values
+# Allegro Component Library - Development Environment Configuration
+# Copy this file to .env and update with your actual values for local development.
 
 # Database Configuration
 DB_HOST=ip_address_or_hostname
