--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -28,7 +30,6 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "@tailwindcss/postcss": "^4.1.14",
     "tailwindcss": "^4.1.14",
     "vite": "^7.1.7"
   }
