--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ DB_NAME=database_name
 # Server Configuration
 PORT=3500
 NODE_ENV=development
+VITE_API_URL=http://localhost:3500/api
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
