--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ VITE_API_URL=http://localhost:3500/api
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
 
+# JWT Authentication
+JWT_SECRET=change-this-to-a-secure-random-string-in-production-minimum-32-characters
+
 # API Keys (Optional - for vendor integrations)
 DIGIKEY_CLIENT_ID=your_digikey_client_id
 DIGIKEY_CLIENT_SECRET=your_digikey_client_secret
