--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,10 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "express-validator": "^7.0.1",
-    "compression": "^1.7.4"
+    "compression": "^1.7.4",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
