fix: more handle for base url and login

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,12 @@ server {
     }
 
     # Proxy API requests to backend
-    location /api {
+    # Support both root path (/) and subdirectory paths (/test, /iclib, etc.)
+    location ~ ^(/[^/]+)?/api {
+        # Remove the base path prefix before proxying to backend
+        # e.g., /test/api/auth/login -> /api/auth/login
+        rewrite ^(/[^/]+)?(/api/.*)$ $2 break;
+        
         proxy_pass http://localhost:3500;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
