feat: complete support of path proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   iclib:
     build:
       context: .
-      dockerfile: Dockerfile
+    image: iclib:latest
     container_name: iclib
     restart: unless-stopped
     ports:
