--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# Nginx configuration for Allegro Component Library
+# Nginx configuration for IC Lib application
 # This config serves the React frontend and proxies API requests to the backend
 
 server {
