feat: eco page with some bug

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ PORT=3500
 NODE_ENV=development
 VITE_API_URL=http://localhost:3500/api
 
+# Feature Toggles
+CONFIG_ECO=true
+
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
 
