--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       # Authentication Settings
       - JWT_SECRET=change-this-to-a-secure-random-string-in-production-minimum-32-characters
       
+      # Feature Flags
+      - CONFIG_ECO=true
+
       # Database Connection (External PostgreSQL)
       # Update these to match your PostgreSQL server
       - DB_HOST=localhost
