Refactor error handling and clean up unused imports
- Updated error handling in various controllers and middleware to use a consistent naming convention for caught errors (e.g., `_error`).
- Removed unused imports from `smtpController.js` and `fileUpload.js`.
- Simplified the `updateComponentApproval` function by removing the commented-out SQL update code.
- Adjusted the `upload` route in `fileUpload.js` to remove an unused variable (`isPassiveShared`).
- Cleaned up the `initializeDatabase`, `resetDatabase`, and `loadSampleData` functions to use `_next` instead of `next` for unused parameters.

--- a/.dockerignore
+++ b/.dockerignore
@@ -21,6 +21,8 @@ lerna-debug.log*
 .env.local
 .env.development
 .env.test
+# Keep .env.production for Vite builds
+!client/.env.production
 
 # IDE
 .vscode/
