refactor: initialization and error handling in server
- Removed silent database connection test from local-start.sh.
- Updated package.json to streamline build scripts and added start script.
- Renamed server package and updated its metadata.
- Enhanced error logging in database connection and service files for better traceability.
- Improved logging format across various controllers and services for consistency.
- Added connection timeout settings for email transporter.
- Updated initialization service to provide clearer feedback during database setup.
- Ensured proper handling of unhandled promise rejections and uncaught exceptions in the server.

--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "client",
-  "private": true,
+  "name": "ic-lib-client",
   "version": "1.4.1",
+  "description": "IC Lib Frontend Client",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage"
@@ -26,9 +27,12 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -38,9 +42,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "vite": "^7.1.7",
-    "vitest": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/jest-dom": "^6.6.3"
+    "vitest": "^3.2.4"
   }
 }
