--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ic-lib-backend-server",
+  "name": "ic-lib-server",
   "version": "1.4.1",
-  "description": "Backend API for IC Lib",
+  "description": "IC Lib Backend API Server",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -20,31 +20,31 @@
     "cis",
     "orcad"
   ],
-  "author": "",
-  "license": "MIT",
+  "author": "Jason Yang",
+  "license": "AGPL-3.0",
   "dependencies": {
-    "express": "^4.18.2",
+    "adm-zip": "^0.5.10",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "axios": "^1.6.2",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "compression": "^1.7.4",
-    "bcryptjs": "^2.4.3",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "cookie-parser": "^1.4.6",
-    "nodemailer": "^7.0.11",
+    "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "adm-zip": "^0.5.10"
+    "nodemailer": "^7.0.11",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "@eslint/js": "^9.36.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
-    "vitest": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4"
+    "nodemon": "^3.0.2",
+    "vitest": "^3.2.4"
   }
 }
