--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,14 +2,7 @@ name: 'Lint'
 
 on:
   push:
-    branches:
-      - main
-      - develop
-      - 'feature/**'
   pull_request:
-    branches:
-      - main
-      - develop
 
 jobs:
   lint-client:
@@ -21,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -44,6 +39,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -51,29 +48,6 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: './server/package-lock.json'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run ESLint
-        run: npm run lint
-
-  lint-scripts:
-    name: Lint Scripts
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./scripts
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: './scripts/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
