--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "./local-start.sh",
+    "start": "./start.sh",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
     "build": "npm run build:client",
     "build:client": "cd client && npm run build",
-    "lint": "./lint.sh",
+    "check": "./check.sh",
+    "check:lint": "./check.sh --lint-only",
+    "check:test": "./check.sh --test-only",
+    "check:coverage": "./check.sh --coverage",
     "lint:fix": "cd client && npm run lint:fix && cd ../server && npm run lint:fix",
-    "test": "./test.sh",
     "docker:build": "./build.sh",
     "release": "./release.sh"
   },
