--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "check": "eslint . && vitest run",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
