--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "check": "eslint . && vitest run",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
