--- a/server/package.json
+++ b/server/package.json
@@ -27,12 +27,14 @@
     "adm-zip": "^0.5.10",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "cfb": "^1.2.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fast-xml-parser": "^5.3.4",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
