--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,12 @@ JWT_SECRET=change-this-to-a-secure-random-string-in-production-minimum-32-charac
 # Example: \\\\server\\share\\library or C:\\CADLibrary
 LIBRARY_BASE_PATH=
 
+# OrCAD OLB Conversion (optional - for TCL-based OLB generation)
+# Path to tclsh.exe (defaults to example/olb/tcltk/tcltk/bin/tclsh.exe)
+ORCAD_TCLSH_PATH=
+# Directory containing orDb_Dll_Tcl64.dll and orDb_Dll64.dll (defaults to example/olb)
+ORCAD_DLL_DIR=
+
 # API Keys (Optional - for vendor integrations)
 DIGIKEY_CLIENT_ID=your_digikey_client_id
 DIGIKEY_CLIENT_SECRET=your_digikey_client_secret
