feat: have lib path, and add mode with file drop

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,11 @@ CORS_ORIGIN=http://localhost:5173
 # JWT Authentication
 JWT_SECRET=change-this-to-a-secure-random-string-in-production-minimum-32-characters
 
+# Library Base Path (for OrCAD CIS file linking)
+# Set to the absolute path where the library folder is accessible from OrCAD workstations
+# Example: \\\\server\\share\\library or C:\\CADLibrary
+LIBRARY_BASE_PATH=
+
 # API Keys (Optional - for vendor integrations)
 DIGIKEY_CLIENT_ID=your_digikey_client_id
 DIGIKEY_CLIENT_SECRET=your_digikey_client_secret
