--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
-    "html5-qrcode": "^2.3.8",
+    "barcode-detector": "^3.0.8",
     "lucide-react": "^0.545.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
