refactor: defined new cad file manage workflow

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ VITE_API_URL=http://localhost:3500/api
 # Feature Toggles
 CONFIG_ECO=true
 
+# Path and Domain
+# FILE_STORAGE_PATH=
+# DOMAIN=
+# SUBDIRECTORY_PATH=
+
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
 
